# subgroup-web

./: .gitignore  BENCHMARKS.md  BRIEF.md  COMPATIBILITY.md  DECISIONS.md  LICENSE  NOTICE  PARITY.md  README.md  STATUS.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts  typedoc.json  vitest.config.ts
reference/: README.md  pyproject.toml
reference/datasets/: adult.manifest.json  manifest.json
reference/fixtures/: binning.json  manifest.json  p1_reference_topk.json  ref_timings.json
reference/fixtures/qfvalues/: creditg-emm-qfvalues.json  creditg-numeric-qfvalues.json  titanic-binary-qfvalues.json  titanic-fi-qfvalues.json
reference/fixtures/spaces/: creditg-nb10-iv.json  creditg-nb5-iv.json  creditg-nb5-noiv.json  titanic-nb10-iv.json  titanic-nb5-iv.json  titanic-nb5-noiv.json
reference/fixtures/tasks/: creditg-binary-wracc-negations-apriori-d2-k10.json  creditg-emm-duration-camount-simple-d1-k5.json  creditg-fi-area-simple-d2-k10.json  creditg-fi-count-apriori-d2-k10.json  (+17 more)
reference/repros/: adj_001_candidate_space.py  adj_002_empty_conjunction.py  adj_003_negation_na.py  adj_004_numeric_empty_quality.py  adj_005_invert_ignored.py  adj_006_emm_degenerate_fit.py  adj_007_max_estimator_overprune.py  adj_008_combined_not_implemented.py  adj_009_ga_numeric_order.py  adj_010_negated_interval_str.py  adj_011_filters_broken.py  adj_012_apriori_requires_estimate.py
reference/scripts/: bench_reference.py  common.py  export_datasets.py  fetch_adult.py  gen_differential_fixtures.py
(+142 files in other folders)
